Fix other light/dark mode features with navbar, buttons, and logo

--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,14 @@ body {
     /* padding: 20px; */
     /* gap: 20px; */
     font-family: Arial, sans-serif;
-    /* background-image: url('./images/tennis-bg.jpg'); */
     background-repeat: repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     margin: 0px;
-
     transition: 
         color 0.3s ease,
-        background-image 0.3s ease;
-
-    
+        background-image 0.3s ease;   
 }
 
 body.light-theme {
@@ -27,6 +23,14 @@ body.light-theme {
 body.dark-theme {
     background-image: url('./images/tennis-bg-dark.jpg');
     color: white;
+}
+
+p {
+    line-height: 28px;
+}
+
+li {
+    line-height: 20px;
 }
 
 .webpage {
@@ -40,9 +44,17 @@ body.dark-theme {
 }
 
 .navbar {
-    background-color: #3287ffce;
     padding: 16px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.light-theme .navbar {
+    background-color: #3287ffce;
+}
+
+.dark-theme .navbar {
+    background-color: #001d46ce;
 }
 
 .navbar-content {
@@ -81,12 +93,12 @@ body.dark-theme {
 
 .navbar a:hover {
     text-decoration: none;
-    background-color: #0040b5;
+    background-color: #003fb591;
 }
 
 .theme-toggle {
     position: absolute;
-    right: 40px;
+    right: 10px;
     padding: 10px 20px;
     color: white;
     border: none;
@@ -94,7 +106,6 @@ body.dark-theme {
     font-weight: bold;
     cursor: pointer;
 }
-
 
 .page-contents {
     display: flex;
@@ -115,7 +126,8 @@ body.dark-theme {
     max-width: 1000px;
     padding: 20px 40px;    
     text-align: center;
-    transition: background-color 0.3 ease;
+    transition: background-color 0.3s ease;
+    margin-bottom: 20px;
 }
 
 .light-theme .page-info{
@@ -123,7 +135,7 @@ body.dark-theme {
 }
 
 .dark-theme .page-info{
-    background-color: rgba(65, 63, 60, 0.804);
+    background-color: rgba(20, 20, 20, 0.804);
 }
 
 .page-info-header {
@@ -131,7 +143,15 @@ body.dark-theme {
     align-items: center;
     justify-content: flex-start;
     padding: 6px 6px;
+    transition: border-bottom 0.3s ease;
+}
+
+.light-theme .page-info-header {
     border-bottom: #0057e7 3px dotted;
+}
+
+.dark-theme .page-info-header {
+    border-bottom: #539bff 3px dotted;
 }
 
 .page-info-header img {
@@ -184,12 +204,19 @@ button {
     margin: 10px;
     padding: 10px 20px;
     font-weight: bold;
-    background-color: #4b87ffe5;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
+
+.light-theme button {
+    background-color: #4b87ffd4;
+}
+
+.dark-theme button {
+    background-color: #003683ce;
 }
 
 button:hover {
